--- a/web/template/signup.html
+++ b/web/template/signup.html
@@ -2,7 +2,7 @@
 
 {{define "body"}}
     <h1>{{template "title"}}</h1>
-    <form>
+    <form action="/signup" method="post">
         <label for="username">username</label>
         <input type="text" name="username"/>
         <label for="password">password</label>
